create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -419,6 +419,7 @@ h6,
 }
 #msg-box1-3q H2 {
   color: #ffffff;
+  font-size: 15px;
 }
 #msg-box3-4n .mbr-section-title,
 #msg-box3-4n p {
@@ -493,13 +494,11 @@ h6,
 #ext_menu-d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3t .mbr-section-title {
+#msg-box2-4s .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-3t .mbr-section-subtitle {
+#msg-box2-4s .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #header2-v .mbr-section-text {
   text-align: center;
@@ -526,11 +525,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-s .link {
-  font-size: 0.8rem;
+  font-size: 0.95rem;
 }
 #ext_menu-s .dropdown-item,
 #ext_menu-s .nav-dropdown-sm .link {
-  font-size: 0.866rem;
+  font-size: 1.029rem;
 }
 #ext_menu-s .link:hover,
 #ext_menu-s .dropdown-item:hover,
@@ -569,13 +568,11 @@ h6,
 #ext_menu-s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3u .mbr-section-title {
+#msg-box2-4t .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-3u .mbr-section-subtitle {
+#msg-box2-4t .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #ext_menu-z .hide-buttons .nav-btn {
   display: none !important;
@@ -596,11 +593,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-z .link {
-  font-size: 0.8rem;
+  font-size: 0.95rem;
 }
 #ext_menu-z .dropdown-item,
 #ext_menu-z .nav-dropdown-sm .link {
-  font-size: 0.866rem;
+  font-size: 1.029rem;
 }
 #ext_menu-z .link:hover,
 #ext_menu-z .dropdown-item:hover,
@@ -639,13 +636,11 @@ h6,
 #ext_menu-z .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3x .mbr-section-title {
+#msg-box2-4u .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-3x .mbr-section-subtitle {
+#msg-box2-4u .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #features1-1b .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #ffffff;
@@ -679,11 +674,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-17 .link {
-  font-size: 0.8rem;
+  font-size: 0.95rem;
 }
 #ext_menu-17 .dropdown-item,
 #ext_menu-17 .nav-dropdown-sm .link {
-  font-size: 0.866rem;
+  font-size: 1.029rem;
 }
 #ext_menu-17 .link:hover,
 #ext_menu-17 .dropdown-item:hover,
@@ -722,13 +717,11 @@ h6,
 #ext_menu-17 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3y .mbr-section-title {
+#msg-box2-4v .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-3y .mbr-section-subtitle {
+#msg-box2-4v .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #content5-1j .mbr-section-title,
 #content5-1j p {
@@ -753,11 +746,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-1e .link {
-  font-size: 0.8rem;
+  font-size: 0.95rem;
 }
 #ext_menu-1e .dropdown-item,
 #ext_menu-1e .nav-dropdown-sm .link {
-  font-size: 0.866rem;
+  font-size: 1.029rem;
 }
 #ext_menu-1e .link:hover,
 #ext_menu-1e .dropdown-item:hover,
@@ -796,13 +789,11 @@ h6,
 #ext_menu-1e .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-41 .mbr-section-title {
+#msg-box2-4w .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-41 .mbr-section-subtitle {
+#msg-box2-4w .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #content5-1p .mbr-section-title,
 #content5-1p p {
@@ -830,11 +821,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-1m .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-1m .dropdown-item,
 #ext_menu-1m .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-1m .link:hover,
 #ext_menu-1m .dropdown-item:hover,
@@ -844,19 +835,19 @@ h6,
 }
 #ext_menu-1m .link[aria-expanded="true"],
 #ext_menu-1m .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-1m .nav-dropdown-sm .link:focus,
 #ext_menu-1m .nav-dropdown-sm .link:hover,
 #ext_menu-1m .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-1m .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-1m .navbar,
 #ext_menu-1m .nav-dropdown-sm,
 #ext_menu-1m .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-1m .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-1m .bg-color.transparent .link {
   color: #ffffff;
@@ -873,13 +864,11 @@ h6,
 #ext_menu-1m .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-42 .mbr-section-title {
+#msg-box2-4x .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-42 .mbr-section-subtitle {
+#msg-box2-4x .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box3-1v .mbr-section-title,
 #msg-box3-1v p {
@@ -913,11 +902,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-1s .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-1s .dropdown-item,
 #ext_menu-1s .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-1s .link:hover,
 #ext_menu-1s .dropdown-item:hover,
@@ -927,19 +916,19 @@ h6,
 }
 #ext_menu-1s .link[aria-expanded="true"],
 #ext_menu-1s .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-1s .nav-dropdown-sm .link:focus,
 #ext_menu-1s .nav-dropdown-sm .link:hover,
 #ext_menu-1s .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-1s .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-1s .navbar,
 #ext_menu-1s .nav-dropdown-sm,
 #ext_menu-1s .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-1s .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-1s .bg-color.transparent .link {
   color: #ffffff;
@@ -956,13 +945,11 @@ h6,
 #ext_menu-1s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-44 .mbr-section-title {
+#msg-box2-4y .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-44 .mbr-section-subtitle {
+#msg-box2-4y .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box3-1x .mbr-section-title,
 #msg-box3-1x p {
@@ -998,11 +985,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-1y .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-1y .dropdown-item,
 #ext_menu-1y .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-1y .link:hover,
 #ext_menu-1y .dropdown-item:hover,
@@ -1012,19 +999,19 @@ h6,
 }
 #ext_menu-1y .link[aria-expanded="true"],
 #ext_menu-1y .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-1y .nav-dropdown-sm .link:focus,
 #ext_menu-1y .nav-dropdown-sm .link:hover,
 #ext_menu-1y .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-1y .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-1y .navbar,
 #ext_menu-1y .nav-dropdown-sm,
 #ext_menu-1y .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-1y .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-1y .bg-color.transparent .link {
   color: #ffffff;
@@ -1041,13 +1028,11 @@ h6,
 #ext_menu-1y .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-47 .mbr-section-title {
+#msg-box2-4z .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-47 .mbr-section-subtitle {
+#msg-box2-4z .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box3-22 .mbr-section-title,
 #msg-box3-22 p {
@@ -1083,11 +1068,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-23 .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-23 .dropdown-item,
 #ext_menu-23 .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-23 .link:hover,
 #ext_menu-23 .dropdown-item:hover,
@@ -1097,19 +1082,19 @@ h6,
 }
 #ext_menu-23 .link[aria-expanded="true"],
 #ext_menu-23 .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-23 .nav-dropdown-sm .link:focus,
 #ext_menu-23 .nav-dropdown-sm .link:hover,
 #ext_menu-23 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-23 .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-23 .navbar,
 #ext_menu-23 .nav-dropdown-sm,
 #ext_menu-23 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-23 .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-23 .bg-color.transparent .link {
   color: #ffffff;
@@ -1126,13 +1111,11 @@ h6,
 #ext_menu-23 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-48 .mbr-section-title {
+#msg-box2-50 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-48 .mbr-section-subtitle {
+#msg-box2-50 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box3-27 .mbr-section-title,
 #msg-box3-27 p {
@@ -1168,11 +1151,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-28 .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-28 .dropdown-item,
 #ext_menu-28 .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-28 .link:hover,
 #ext_menu-28 .dropdown-item:hover,
@@ -1182,19 +1165,19 @@ h6,
 }
 #ext_menu-28 .link[aria-expanded="true"],
 #ext_menu-28 .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-28 .nav-dropdown-sm .link:focus,
 #ext_menu-28 .nav-dropdown-sm .link:hover,
 #ext_menu-28 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-28 .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-28 .navbar,
 #ext_menu-28 .nav-dropdown-sm,
 #ext_menu-28 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-28 .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-28 .bg-color.transparent .link {
   color: #ffffff;
@@ -1211,13 +1194,11 @@ h6,
 #ext_menu-28 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4b .mbr-section-title {
+#msg-box2-51 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-4b .mbr-section-subtitle {
+#msg-box2-51 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #features3-2p H5 {
   color: #ffffff;
@@ -1247,11 +1228,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-2d .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-2d .dropdown-item,
 #ext_menu-2d .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-2d .link:hover,
 #ext_menu-2d .dropdown-item:hover,
@@ -1261,19 +1242,19 @@ h6,
 }
 #ext_menu-2d .link[aria-expanded="true"],
 #ext_menu-2d .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-2d .nav-dropdown-sm .link:focus,
 #ext_menu-2d .nav-dropdown-sm .link:hover,
 #ext_menu-2d .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-2d .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-2d .navbar,
 #ext_menu-2d .nav-dropdown-sm,
 #ext_menu-2d .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-2d .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-2d .bg-color.transparent .link {
   color: #ffffff;
@@ -1290,13 +1271,11 @@ h6,
 #ext_menu-2d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4c .mbr-section-title {
+#msg-box2-52 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-4c .mbr-section-subtitle {
+#msg-box2-52 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box8-2v .mbr-section-title,
 #msg-box8-2v p {
@@ -1331,11 +1310,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-2s .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-2s .dropdown-item,
 #ext_menu-2s .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-2s .link:hover,
 #ext_menu-2s .dropdown-item:hover,
@@ -1345,19 +1324,19 @@ h6,
 }
 #ext_menu-2s .link[aria-expanded="true"],
 #ext_menu-2s .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-2s .nav-dropdown-sm .link:focus,
 #ext_menu-2s .nav-dropdown-sm .link:hover,
 #ext_menu-2s .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-2s .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-2s .navbar,
 #ext_menu-2s .nav-dropdown-sm,
 #ext_menu-2s .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-2s .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-2s .bg-color.transparent .link {
   color: #ffffff;
@@ -1374,13 +1353,11 @@ h6,
 #ext_menu-2s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4e .mbr-section-title {
+#msg-box2-53 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-4e .mbr-section-subtitle {
+#msg-box2-53 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box3-3b .mbr-section-title,
 #msg-box3-3b p {
@@ -1405,11 +1382,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-34 .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-34 .dropdown-item,
 #ext_menu-34 .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-34 .link:hover,
 #ext_menu-34 .dropdown-item:hover,
@@ -1419,19 +1396,19 @@ h6,
 }
 #ext_menu-34 .link[aria-expanded="true"],
 #ext_menu-34 .dropdown-menu {
-  background: #7d6239;
+  background: #141414;
 }
 #ext_menu-34 .nav-dropdown-sm .link:focus,
 #ext_menu-34 .nav-dropdown-sm .link:hover,
 #ext_menu-34 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-34 .nav-dropdown-sm .dropdown-item:hover {
-  background: #957644!important;
+  background: #262626!important;
 }
 #ext_menu-34 .navbar,
 #ext_menu-34 .nav-dropdown-sm,
 #ext_menu-34 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-34 .nav-dropdown-sm .dropdown-menu {
-  background: #a07e49;
+  background: #2e2e2e;
 }
 #ext_menu-34 .bg-color.transparent .link {
   color: #ffffff;
@@ -1448,13 +1425,11 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4g .mbr-section-title {
+#msg-box2-54 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-4g .mbr-section-subtitle {
+#msg-box2-54 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #form1-3i .form-control-label {
   color: #232323;
@@ -1478,11 +1453,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-3f .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-3f .dropdown-item,
 #ext_menu-3f .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-3f .link:hover,
 #ext_menu-3f .dropdown-item:hover,
@@ -1492,19 +1467,19 @@ h6,
 }
 #ext_menu-3f .link[aria-expanded="true"],
 #ext_menu-3f .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-3f .nav-dropdown-sm .link:focus,
 #ext_menu-3f .nav-dropdown-sm .link:hover,
 #ext_menu-3f .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-3f .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-3f .navbar,
 #ext_menu-3f .nav-dropdown-sm,
 #ext_menu-3f .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-3f .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-3f .bg-color.transparent .link {
   color: #ffffff;
@@ -1521,13 +1496,11 @@ h6,
 #ext_menu-3f .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4i .mbr-section-title {
+#msg-box2-55 .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-4i .mbr-section-subtitle {
+#msg-box2-55 .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #ext_menu-3m .hide-buttons .nav-btn {
   display: none !important;
@@ -1548,11 +1521,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-3m .link {
-  font-size: 0.9rem;
+  font-size: 0.95rem;
 }
 #ext_menu-3m .dropdown-item,
 #ext_menu-3m .nav-dropdown-sm .link {
-  font-size: 0.975rem;
+  font-size: 1.029rem;
 }
 #ext_menu-3m .link:hover,
 #ext_menu-3m .dropdown-item:hover,
@@ -1562,19 +1535,19 @@ h6,
 }
 #ext_menu-3m .link[aria-expanded="true"],
 #ext_menu-3m .dropdown-menu {
-  background: #055b5b;
+  background: #141414;
 }
 #ext_menu-3m .nav-dropdown-sm .link:focus,
 #ext_menu-3m .nav-dropdown-sm .link:hover,
 #ext_menu-3m .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-3m .nav-dropdown-sm .dropdown-item:hover {
-  background: #077d7d!important;
+  background: #262626!important;
 }
 #ext_menu-3m .navbar,
 #ext_menu-3m .nav-dropdown-sm,
 #ext_menu-3m .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-3m .nav-dropdown-sm .dropdown-menu {
-  background: #088b8b;
+  background: #2e2e2e;
 }
 #ext_menu-3m .bg-color.transparent .link {
   color: #ffffff;
