create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -494,10 +494,10 @@ h6,
 #ext_menu-d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4s .mbr-section-title {
+#msg-box2-57 .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4s .mbr-section-subtitle {
+#msg-box2-57 .mbr-section-subtitle {
   color: #ffffff;
 }
 #header2-v .mbr-section-text {
@@ -568,10 +568,10 @@ h6,
 #ext_menu-s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4t .mbr-section-title {
+#msg-box2-58 .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4t .mbr-section-subtitle {
+#msg-box2-58 .mbr-section-subtitle {
   color: #ffffff;
 }
 #ext_menu-z .hide-buttons .nav-btn {
@@ -636,10 +636,10 @@ h6,
 #ext_menu-z .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4u .mbr-section-title {
+#msg-box2-59 .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4u .mbr-section-subtitle {
+#msg-box2-59 .mbr-section-subtitle {
   color: #ffffff;
 }
 #features1-1b .striped .mbr-cards-col:nth-child(2n+1) {
@@ -717,10 +717,10 @@ h6,
 #ext_menu-17 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4v .mbr-section-title {
+#msg-box2-5a .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4v .mbr-section-subtitle {
+#msg-box2-5a .mbr-section-subtitle {
   color: #ffffff;
 }
 #content5-1j .mbr-section-title,
@@ -789,10 +789,10 @@ h6,
 #ext_menu-1e .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4w .mbr-section-title {
+#msg-box2-5b .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4w .mbr-section-subtitle {
+#msg-box2-5b .mbr-section-subtitle {
   color: #ffffff;
 }
 #content5-1p .mbr-section-title,
@@ -864,10 +864,10 @@ h6,
 #ext_menu-1m .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4x .mbr-section-title {
+#msg-box2-5c .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4x .mbr-section-subtitle {
+#msg-box2-5c .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box3-1v .mbr-section-title,
@@ -945,10 +945,10 @@ h6,
 #ext_menu-1s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4y .mbr-section-title {
+#msg-box2-5d .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4y .mbr-section-subtitle {
+#msg-box2-5d .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box3-1x .mbr-section-title,
@@ -1028,10 +1028,10 @@ h6,
 #ext_menu-1y .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-4z .mbr-section-title {
+#msg-box2-5e .mbr-section-title {
   color: #fff;
 }
-#msg-box2-4z .mbr-section-subtitle {
+#msg-box2-5e .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box3-22 .mbr-section-title,
@@ -1111,10 +1111,10 @@ h6,
 #ext_menu-23 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-50 .mbr-section-title {
+#msg-box2-5f .mbr-section-title {
   color: #fff;
 }
-#msg-box2-50 .mbr-section-subtitle {
+#msg-box2-5f .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box3-27 .mbr-section-title,
@@ -1194,10 +1194,10 @@ h6,
 #ext_menu-28 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-51 .mbr-section-title {
+#msg-box2-5g .mbr-section-title {
   color: #fff;
 }
-#msg-box2-51 .mbr-section-subtitle {
+#msg-box2-5g .mbr-section-subtitle {
   color: #ffffff;
 }
 #features3-2p H5 {
@@ -1271,10 +1271,10 @@ h6,
 #ext_menu-2d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-52 .mbr-section-title {
+#msg-box2-5h .mbr-section-title {
   color: #fff;
 }
-#msg-box2-52 .mbr-section-subtitle {
+#msg-box2-5h .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box8-2v .mbr-section-title,
@@ -1353,10 +1353,10 @@ h6,
 #ext_menu-2s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-53 .mbr-section-title {
+#msg-box2-5i .mbr-section-title {
   color: #fff;
 }
-#msg-box2-53 .mbr-section-subtitle {
+#msg-box2-5i .mbr-section-subtitle {
   color: #ffffff;
 }
 #msg-box3-3b .mbr-section-title,
@@ -1425,10 +1425,10 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-54 .mbr-section-title {
+#msg-box2-5j .mbr-section-title {
   color: #fff;
 }
-#msg-box2-54 .mbr-section-subtitle {
+#msg-box2-5j .mbr-section-subtitle {
   color: #ffffff;
 }
 #form1-3i .form-control-label {
@@ -1496,10 +1496,10 @@ h6,
 #ext_menu-3f .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-55 .mbr-section-title {
+#msg-box2-5k .mbr-section-title {
   color: #fff;
 }
-#msg-box2-55 .mbr-section-subtitle {
+#msg-box2-5k .mbr-section-subtitle {
   color: #ffffff;
 }
 #ext_menu-3m .hide-buttons .nav-btn {
