--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -410,6 +412,17 @@ h6,
 }
 .scrollToTop_wraper {
   opacity: 0 !important;
+}
+#msg-box5-5l P {
+  text-align: left;
+  color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5l H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box1-3q H2 {
   color: #ffffff;
