create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -501,11 +501,17 @@ h6,
 #ext_menu-d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-57 .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-57 .mbr-section-subtitle {
+
+#msg-box5-5p P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5p H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #header2-v .mbr-section-text {
   text-align: center;
@@ -575,11 +581,17 @@ h6,
 #ext_menu-s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-58 .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-58 .mbr-section-subtitle {
+
+#msg-box5-5q P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5q H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #ext_menu-z .hide-buttons .nav-btn {
   display: none !important;
@@ -643,11 +655,17 @@ h6,
 #ext_menu-z .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-59 .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-59 .mbr-section-subtitle {
+
+#msg-box5-5r P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5r H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #features1-1b .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #ffffff;
@@ -724,11 +742,17 @@ h6,
 #ext_menu-17 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5a .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5a .mbr-section-subtitle {
+
+#msg-box5-5s P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5s H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #content5-1j .mbr-section-title,
 #content5-1j p {
@@ -796,11 +820,17 @@ h6,
 #ext_menu-1e .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5b .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5b .mbr-section-subtitle {
+
+#msg-box5-5t P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5t H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #content5-1p .mbr-section-title,
 #content5-1p p {
@@ -871,11 +901,17 @@ h6,
 #ext_menu-1m .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5c .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5c .mbr-section-subtitle {
+
+#msg-box5-5u P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5u H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box3-1v .mbr-section-title,
 #msg-box3-1v p {
@@ -952,11 +988,17 @@ h6,
 #ext_menu-1s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5d .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5d .mbr-section-subtitle {
+
+#msg-box5-5v P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5v H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box3-1x .mbr-section-title,
 #msg-box3-1x p {
@@ -1035,11 +1077,17 @@ h6,
 #ext_menu-1y .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5e .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5e .mbr-section-subtitle {
+
+#msg-box5-5w P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5w H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box3-22 .mbr-section-title,
 #msg-box3-22 p {
@@ -1118,11 +1166,17 @@ h6,
 #ext_menu-23 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5f .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5f .mbr-section-subtitle {
+
+#msg-box5-5x P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5x H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box3-27 .mbr-section-title,
 #msg-box3-27 p {
@@ -1201,11 +1255,17 @@ h6,
 #ext_menu-28 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5g .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5g .mbr-section-subtitle {
+
+#msg-box5-5y P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5y H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #features3-2p H5 {
   color: #ffffff;
@@ -1278,11 +1338,17 @@ h6,
 #ext_menu-2d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5h .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5h .mbr-section-subtitle {
+
+#msg-box5-5z P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-5z H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box8-2v .mbr-section-title,
 #msg-box8-2v p {
@@ -1360,11 +1426,17 @@ h6,
 #ext_menu-2s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5i .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5i .mbr-section-subtitle {
+
+#msg-box5-60 P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-60 H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #msg-box3-3b .mbr-section-title,
 #msg-box3-3b p {
@@ -1432,11 +1504,17 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5j .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5j .mbr-section-subtitle {
+
+#msg-box5-61 P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-61 H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #form1-3i .form-control-label {
   color: #232323;
@@ -1503,11 +1581,17 @@ h6,
 #ext_menu-3f .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-5k .mbr-section-title {
-  color: #fff;
-}
-#msg-box2-5k .mbr-section-subtitle {
+
+#msg-box5-62 P {
+  text-align: left;
   color: #ffffff;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-62 H3 {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: left;
 }
 #ext_menu-3m .hide-buttons .nav-btn {
   display: none !important;
