--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 
 
@@ -416,8 +417,8 @@ h6,
 #msg-box5-5l P {
   text-align: left;
   color: #ffffff;
-  font-size: 20px;
-  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
 }
 #msg-box5-5l H3 {
   color: #ffffff;
