--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,8 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 
 
@@ -414,13 +413,13 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#msg-box5-5l P {
+#msg-box5-63 P {
   text-align: left;
   color: #ffffff;
-  font-size: 16px;
-  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
-#msg-box5-5l H3 {
+#msg-box5-63 H3 {
   color: #ffffff;
   font-size: 20px;
   text-align: left;
@@ -459,11 +458,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-d .link {
-  font-size: 0.95rem;
+  font-size: 0.8rem;
 }
 #ext_menu-d .dropdown-item,
 #ext_menu-d .nav-dropdown-sm .link {
-  font-size: 1.029rem;
+  font-size: 0.866rem;
 }
 #ext_menu-d .link:hover,
 #ext_menu-d .dropdown-item:hover,
